Fix text overflow in event info modal

--- a/src/modules/modals/_modal.scss
+++ b/src/modules/modals/_modal.scss
@@ -129,4 +129,22 @@
             text-align: left;
         }
     }
+
+    // Event info modal
+    .content-1OG56Q > div[style*="width: 600px;"]{
+        width: 552px !important;
+
+        > div[style*="width: 600px;"]{
+            width: 552px !important;
+        }
+
+        .header-18H69z{
+            padding-left: 0;
+            padding-right: 0;
+        }
+        .body-3dZw8h{
+            padding-left: 0;
+            padding-right: 0;
+        }
+    }
 }
